# candles-iterator

./: README.md  debug-run.sh  dump.paste  example.py  pyproject.toml  requirements.txt  setup.py
candle_iterator/: __init__.py  candle_iterator.py  cli.py  partition_writer.py
tests/: test_aggregator_contracts.py  test_anchor_boundary.py  test_base_snapshot_update.py  test_catchup_drain.py  test_cli.py  test_consume_subcandle.py  test_factory_polling_end_ts.py  test_factory_validation.py  test_fast_append.py  test_file_discovery.py  test_finite_stream_stop_iteration.py  test_flush_guards.py  test_force_close_final.py  test_fs_helpers_and_truthy_env.py  test_get_current_open_candle.py  test_golden_integration.py  test_ingest_row.py  test_misc_p2.py  test_parse_timestamp.py  test_partition_writer.py  test_phase2_validation.py  test_phase3_observability.py  test_phase4_polish.py  test_poll_interval_resolve.py  test_record_closure_and_make_closure.py  test_snapshot_apis.py  test_sync_wrapper_idempotency.py  test_tail_follow.py  test_tf_parser.py
